# EmbedBuilder

./: .gitignore  README.md  core.py  pyproject.toml  pytest.ini  requirements-dev.txt  utils.py
src/: core.py  pagination.py
src/embedbuilder/: core.py  customization.py  messagesender.py  utils.py
src/py_embedbuilder.egg-info/: PKG-INFO
src/tests/: conftest.py  test_embedbuilder.py  test_integration.py  test_performance.py
